; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_eth/src/extr_esp_eth_phy_ip101.c_ip101_deinit.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_eth/src/extr_esp_eth_phy_ip101.c_ip101_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"power control failed\00", align 1
@err = common dso_local global i32 0, align 4
@ESP_FAIL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @ip101_deinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ip101_deinit(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i64 @ip101_pwrctl(i32* %4, i32 0)
  %6 = load i64, i64* @ESP_OK, align 8
  %7 = icmp eq i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = load i32, i32* @err, align 4
  %10 = call i32 @PHY_CHECK(i32 %8, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i64, i64* @ESP_OK, align 8
  store i64 %11, i64* %2, align 8
  br label %14

12:                                               ; No predecessors!
  %13 = load i64, i64* @ESP_FAIL, align 8
  store i64 %13, i64* %2, align 8
  br label %14

14:                                               ; preds = %12, %1
  %15 = load i64, i64* %2, align 8
  ret i64 %15
}

declare dso_local i32 @PHY_CHECK(i32, i8*, i32) #1

declare dso_local i64 @ip101_pwrctl(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
